welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:12: error: ';' expected but 'else' found.
else droite() ; droite() ; }
^