welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
if (estFaceMur()==false) { 
	

while (estSurBiscuit()==false) {
	if(estSurBiscuit()==true) {
		prendBiscuit() ;      }
		else avance() ;
 
avance() ;  }

else droite() ; droite() ; }
